sas-core/main/default/objects/SocialPost/SocialPost.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>