sas-core/main/default/objects/SocialPost/fields/CaseCreated__c.field-meta.xml
<CustomField>
    <fullName>CaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post has a case created from it</description>
    <label>CaseCreated</label>
    <type>Checkbox</type>
</CustomField>