sas-core/main/default/objects/SocialPost/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post fulfills the criteria of being handled</description>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>