sas-core/main/default/objects/SocialPost/fields/FCS_AnswerTime__c.field-meta.xml
<CustomField>
    <fullName>FCS_AnswerTime__c</fullName>
    <formula>(FCS_ClosedDate__c-Posted)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>