sas-core/main/default/objects/SocialPost/fields/FCS_CaseCreated__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post has a case created from it</description>
    <label>Case Created</label>
    <type>Checkbox</type>
</CustomField>