sas-core/main/default/objects/SocialPost/fields/FCS_ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>FCS_ClosedDate__c</fullName>
    <description>The date when the social post was marked as done</description>
    <inlineHelpText>The date when the social post was marked as done</inlineHelpText>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>