sas-core/main/default/objects/SocialPost/fields/FCS_IsReply__c.field-meta.xml
<CustomField>
    <fullName>FCS_IsReply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>States weather the post is a reply (3rd line in chain or not)</description>
    <label>Is Reply</label>
    <type>Checkbox</type>
</CustomField>