sas-core/main/default/objects/SocialPost/fields/FCS_ParentCommentMessage__c.field-meta.xml
<CustomField>
    <fullName>FCS_ParentCommentMessage__c</fullName>
    <description>If the post is a reply the parent(comment) is stored in this field</description>
    <label>Parent Comment Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>