sas-core/main/default/objects/SocialPost/fields/FCS_PostHidden__c.field-meta.xml
<CustomField>
    <fullName>FCS_PostHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post is hidden from its source e.g Facebook or Twitter</description>
    <inlineHelpText>Checked if the post is hidden from its source e.g Facebook or Twitter</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>