sas-core/main/default/objects/SocialPost/fields/FCS_PostLiked__c.field-meta.xml
<CustomField>
    <fullName>FCS_PostLiked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post is liked from SF e.g Facebook or Twitter</description>
    <label>Liked</label>
    <type>Checkbox</type>
</CustomField>