sas-core/main/default/objects/SocialPost/fields/FCS_PreviousQueue__c.field-meta.xml
<CustomField>
    <fullName>FCS_PreviousQueue__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <description>Stores the Id of the previous Queue.</description>
    <label>Previous Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>