sas-core/main/default/objects/SocialPost/fields/FCS_SASPost__c.field-meta.xml
<CustomField>
    <fullName>FCS_SASPost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post is posted by SAS</description>
    <label>SAS Post</label>
    <type>Checkbox</type>
</CustomField>