sas-core/main/default/objects/SocialPost/fields/FCS_SASPostComment__c.field-meta.xml
<CustomField>
    <fullName>FCS_SASPostComment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cheked if the comment/reply is a comment/reply on a SAS post</description>
    <label>Comment on SAS Post</label>
    <type>Checkbox</type>
</CustomField>