sas-core/main/default/objects/SocialPost/fields/FCS_Team__c.field-meta.xml
<CustomField>
    <fullName>FCS_Team__c</fullName>
    <description>The team of the social post owner (that is a user)</description>
    <inlineHelpText>The team of the case owner (that is a user)</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Team</valueSetName>
    </valueSet>
</CustomField>