sas-core/main/default/objects/SocialPost/fields/FCS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>FCS_Vendor__c</fullName>
    <description>The vendor of the social post owner (that is a user).</description>
    <inlineHelpText>The vendor of the social post owner (that is a user).</inlineHelpText>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Vendor</valueSetName>
    </valueSet>
</CustomField>