sas-core/main/default/objects/SocialPost/fields/FCS_VirtualOrganization__c.field-meta.xml
<CustomField>
    <fullName>FCS_VirtualOrganization__c</fullName>
    <description>The Virtual Organization of the social post owner (that is a user)</description>
    <inlineHelpText>The Virtual Organization of the social post owner (that is a user)</inlineHelpText>
    <label>Virtual Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Virtual_Organization</valueSetName>
    </valueSet>
</CustomField>