sas-core/main/default/objects/SocialPost/fields/ParentMessage__c.field-meta.xml
<CustomField>
    <fullName>ParentMessage__c</fullName>
    <label>Parent Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>