sas-core/main/default/objects/SocialPost/fields/PostIgnored__c.field-meta.xml
<CustomField>
    <fullName>PostIgnored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the action taken on the post is ignore</description>
    <label>Ignored</label>
    <type>Checkbox</type>
</CustomField>