sas-core/main/default/objects/SocialPost/fields/PostReason__c.field-meta.xml
<CustomField>
    <fullName>PostReason__c</fullName>
    <description>States the reason why the customer is</description>
    <label>Post Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>