sas-core/main/default/objects/SocialPost/fields/PostReplied__c.field-meta.xml
<CustomField>
    <fullName>PostReplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the post is replied to from SF to  e.g Facebook or Twitter</description>
    <label>Replied</label>
    <type>Checkbox</type>
</CustomField>