sas-core/main/default/objects/SocialPost/fields/PostSubReason__c.field-meta.xml
<CustomField>
    <fullName>PostSubReason__c</fullName>
    <label>Post Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PostReason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>