sas-core/main/default/objects/SocialPost/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if the social post is reopened</description>
    <inlineHelpText>Marked true if the social post is reopened</inlineHelpText>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>