sas-core/main/default/objects/SocialPost/fields/SASPost__c.field-meta.xml
<CustomField>
    <fullName>SASPost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAS Post</label>
    <type>Checkbox</type>
</CustomField>