sas-core/main/default/objects/SocialPost/fields/SASPostComment__c.field-meta.xml
<CustomField>
    <fullName>SASPostComment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comment on SAS Post</label>
    <type>Checkbox</type>
</CustomField>