sas-core/main/default/objects/SocialPost/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>The team of the social post owner (that is a user)</description>
    <inlineHelpText>The team of the social post owner (that is a user)</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>