sas-core/main/default/objects/SocialPost/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>The vendor of the social post owner (that is a user)</description>
    <inlineHelpText>The vendor of the social post owner (that is a user)</inlineHelpText>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>