sas-core/main/default/objects/SocialPost/fields/VirtualOrganization__c.field-meta.xml
<CustomField>
    <fullName>VirtualOrganization__c</fullName>
    <description>The Virtual Organization of the social post owner (that is a user)</description>
    <inlineHelpText>The Virtual Organization of the social post owner (that is a user)</inlineHelpText>
    <label>Virtual Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>