sas-core/main/default/objects/SocialPost/listViews/AllSocialPosts.listView-meta.xml
<ListView>
    <fullName>AllSocialPosts</fullName>
    <columns>Name</columns>
    <columns>ReplyTo</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Provider</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>MessageType</columns>
    <columns>ReviewedStatus</columns>
    <filterScope>Everything</filterScope>
    <label>All social posts</label>
</ListView>