sas-core/main/default/objects/SocialPost/listViews/Customer_Posts.listView-meta.xml
<ListView>
    <fullName>Customer_Posts</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>FCS_ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FCS_SASPost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FCS_SASPostComment__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <filters>
        <field>IsOutbound</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Customer Post</label>
</ListView>