sas-core/main/default/objects/SocialPost/listViews/GlobalSupportSoMe_SocialPost.listView-meta.xml
<ListView>
    <fullName>GlobalSupportSoMe_SocialPost</fullName>
    <columns>Name</columns>
    <columns>ReplyTo</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Provider</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>MessageType</columns>
    <columns>ReviewedStatus</columns>
    <columns>Notes</columns>
    <filterScope>Queue</filterScope>
    <label>Global Support SoMe</label>
    <queue>GlobalSupportSoMe</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>