sas-core/main/default/objects/SocialPost/listViews/Handled_Posts.listView-meta.xml
<ListView>
    <fullName>Handled_Posts</fullName>
    <columns>Name</columns>
    <columns>Parent</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>ReviewedStatus</columns>
    <columns>Notes</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReviewedStatus</field>
        <operation>notEqual</operation>
        <value>Needed</value>
    </filters>
    <filters>
        <field>SASPost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Handled Posts</label>
</ListView>