sas-core/main/default/objects/SocialPost/listViews/My_handled_social_posts.listView-meta.xml
<ListView>
    <fullName>My_handled_social_posts</fullName>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>FCS_ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Ignore,Reviewed</value>
    </filters>
    <label>My handled social posts</label>
</ListView>