sas-core/main/default/objects/SocialPost/listViews/My_open_social_posts.listView-meta.xml
<ListView>
    <fullName>My_open_social_posts</fullName>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>PostStatus__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <label>My open social posts</label>
</ListView>