sas-core/main/default/objects/SocialPost/listViews/SAS_Post.listView-meta.xml
<ListView>
    <fullName>SAS_Post</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SASPost__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsOutbound</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SAS Posts and Replies</label>
</ListView>