sas-core/main/default/objects/SocialPost/listViews/SAS_Posts.listView-meta.xml
<ListView>
    <fullName>SAS_Posts</fullName>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>FCS_ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <filters>
        <field>FCS_SASPostComment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Comments on SAS Posts</label>
</ListView>