sas-core/main/default/objects/SocialPost/listViews/Social_post_pending_approval_filter.listView-meta.xml
<ListView>
    <fullName>Social_post_pending_approval_filter</fullName>
    <columns>Name</columns>
    <columns>ReplyTo</columns>
    <columns>Content</columns>
    <columns>Parent</columns>
    <columns>Posted</columns>
    <columns>Provider</columns>
    <columns>Persona</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>6</value>
    </filters>
    <label>Social posts pending approval</label>
</ListView>