sas-core/main/default/objects/SocialPost/listViews/Social_Posts_with_cases.listView-meta.xml
<ListView>
    <fullName>Social_Posts_with_cases</fullName>
    <columns>ReviewedStatus</columns>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>ReplyTo</columns>
    <columns>FCS_ParentMessage__c</columns>
    <columns>Provider</columns>
    <columns>Posted</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>IsOutbound</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Social Posts with Cases</label>
</ListView>