sas-core/main/default/objects/SocialPost/listViews/Unhandled_facebook_post.listView-meta.xml
<ListView>
    <fullName>Unhandled_facebook_post</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Provider</columns>
    <columns>Persona</columns>
    <columns>Parent</columns>
    <columns>MessageType</columns>
    <columns>ReviewedStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <label>Unhandled Facebook Post</label>
</ListView>