sas-core/main/default/objects/SocialPost/listViews/Unhandled_twitter_post.listView-meta.xml
<ListView>
    <fullName>Unhandled_twitter_post</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>Parent</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>ReviewedStatus</columns>
    <columns>Notes</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <filters>
        <field>Provider</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unhandled twitter post</label>
</ListView>